# mclaren

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  app.cc  app.h  application.cc  application.h  camera.cc  camera.h  compile-shaders.sh  config.h  deletion_queue.cc  deletion_queue.h  event_system.cc  event_system.h  frame_graph.cc  frame_graph.h  geometry.cc  geometry.h  geometry_system.cc  geometry_system.h  gizmo.cc  gizmo.h  input_system.cc  input_system.h  light.h  logging.cc  main.cc  mesh.cc  mesh.h  mesh_buffer.cc  mesh_buffer.h  mesh_loader.cc  mesh_loader.h  mesh_system.cc  mesh_system.h  platform.cc  platform.h  (+51 more)
core/: deletion_queue.cc  frame_graph.cc  logging.cc  logging.h
shaders/: bounding-box.vert  colored-line.frag  colored-line.vert  colored-triangle-mesh.vert  colored-triangle.vert  entity-picking.frag  entity-picking.vert  gizmo-line.frag  gizmo-line.vert  gizmo-triangle.frag  gizmo-triangle.vert  gizmo.frag  gizmo.vert  global_state.glsl  gradient.comp  line.frag  line.vert  lit-barycentric.frag  lit.frag  lit.vert  mesh.frag  mesh.vert  object-picking.frag  object-picking.vert  vertex-lit.vert  vertex-shadow.vert  vertex.glsl  wireframe.frag  wireframe.vert
